[package]
name = "chromash"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
chrono = "0.4"


[[bin]]
name = "chromash"
path = "src/main.rs"